# asio_kcp

./: .gitignore  CMakeLists.txt  clean.sh  cp2Hileia.sh  hileia2here.sh  platform.h  quick_make.sh
client_lib/: CMakeLists.txt  CMakeLists_android.txt  hileia_kcp.cpp  hileia_kcp.hpp  kcp_buffer_data.cpp  kcp_buffer_data.hpp  kcp_client.cpp  kcp_client.hpp  kcp_client_util.cpp  kcp_client_wrap.cpp  kcp_client_wrap.hpp  platform.h  threadsafe_queue_mutex.hpp
client_with_asio/: Makefile  client_with_asio.cpp  client_with_asio.hpp  client_with_asio_hileia.cpp  client_with_asio_hileia.hpp  client_with_asio_wrap.cpp  client_with_asio_wrap.hpp  main.cpp
essential/_src/: check_function.cpp
essential/_src/utility/: strutil.cpp
include/: kcp_buffer_data.hpp  kcp_client.hpp  kcp_client_wrap.hpp
include/util/: connect_packet.hpp
samples/linux/: CMakeLists.txt  main.cpp
samples/win32/: CMakeLists.txt  main.cpp
sdks/win32/Debug/: kcp_client.ilk
server/: main.cpp  server.cpp  server.hpp
server_lib/: Makefile  connection.cpp  connection.hpp  connection_container.cpp  connection_manager.cpp  connection_manager.hpp  kcp_buffer_data.cpp  kcp_buffer_data.hpp  kcp_typedef.hpp  server.cpp  server.hpp
toolchain/: android.toolchain.cmake  ios.toolchain.cmake
util/: connect_packet.cpp  ikcp.c  ikcp.h
